# cagnotte

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: auth.py  config.py  main.py
cota-app/: .env.example  .gitignore  App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
cota-app/src/: theme.ts
cota-app/src/components/: AddCardSheet.tsx  Avatar.tsx  Button.tsx  Chip.tsx  PotThumb.tsx  ProgressBar.tsx  Skeleton.tsx  Spinner.tsx  StepProgress.tsx  StickyCTA.tsx  StripeConfirmer.tsx  TabBar.tsx  Thumb.tsx  TopNav.tsx
cota-app/src/data/: hooks.ts  mock.ts  types.ts
cota-app/src/icons/: Icons.tsx
cota-app/src/lib/: auth.tsx  biometrics.ts  stripe.ts  supabase.ts  uploadImage.ts
cota-app/src/navigation/: index.tsx
cota-app/src/screens/: ContributeScreen.tsx  CreateCategoryScreen.tsx  CreateDetailsScreen.tsx  DetailScreen.tsx  EditPotScreen.tsx  EditProfileScreen.tsx  HomeScreen.tsx  LockScreen.tsx  NotificationsScreen.tsx  PaymentMethodsScreen.tsx  PaymentScreen.tsx  PotsScreen.tsx  ProfileScreen.tsx  SecurityScreen.tsx  ShareScreen.tsx
cota-app/src/screens/onboarding/: AuthMethodsScreen.tsx  EmailFormScreen.tsx  OTPScreen.tsx  PhoneFormScreen.tsx  ProfileSetupScreen.tsx  ValuePropsScreen.tsx  WelcomeHomeScreen.tsx  WelcomeScreen.tsx
cota-app/src/screens/public/: PublicContributeScreen.tsx  PublicLandingScreen.tsx  PublicPaymentScreen.tsx  PublicThanksScreen.tsx  StepIndicator.tsx  _shared.tsx
cota-app/src/screens/states/: DetailSkeleton.tsx  EmptyHome.tsx  EmptyNotifications.tsx  EmptyPotDetail.tsx  (+4 more)
(+1 files in other folders)
