[project]
name = "cota-backend"
version = "0.1.0"
description = "Cota backend — FastAPI + Supabase + Stripe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.12.1",
    "stripe>=15.1.0",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
